# tsp-classifier

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
TSPClassifier/: _kernels.py  _model.py  tsp_classifier.py
src/tspfs/: __init__.py  _kernels.py  _model.py  errors.py  estimator.py
tests/: test_tspfs.py
tsp_classifier/: tsp_classifier.py
tspfs/: .gitignore  _kernels.py  _model.py  tsp_classifier.py
